PR/52976: Eitan Adler: handle larger primes Using results from     J. Sorenson and J. Webster, Strong pseudoprimes to twelve prime     bases, Math. Comp. 86(304):985-1003, 2017. teach primes(6) to enumerate primes up to 2^64 - 1.  Until Sorenson and Webster's paper, we did not know how many strong speudoprime tests were required when testing alleged primes between 3825123056546413051 and 2^64 - 1.

Adapted from: FreeBSD